--- a/src/index.css
+++ b/src/index.css
@@ -187,9 +187,9 @@ input:-webkit-autofill:active  {
   -webkit-text-fill-color: #828282;
 }
 
-.map-container {
+.map {
 	position: absolute;
-	top: 73px;
+	top: 65px;
 	bottom: 0;
 	left: 0;
 	right: 0;
