--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+html,
 body {
-  margin: 0;
+	margin: 0;
+	height: 100%;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} 
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -16,12 +21,6 @@ body {
   	font-size: 14px;
 	font-style: normal;
   	font-weight: 400;
-	background-color: lemonchiffon;
-}
-
-code {
-font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
 }
 
 * {
@@ -69,9 +68,12 @@ input {
 }
 
 .container {
-  max-width: 1440px;
-  padding: 4px 24px;
   margin: 0 auto;
+  height: 100%;
+}
+
+.maincontent {
+	height: 100vh;
 }
 
 .header {
@@ -122,6 +124,8 @@ input {
   color: #FDBF5A;
 }
 
+
+
 .form {
   max-width: 580px;
   background-color: #fff;
@@ -130,14 +134,6 @@ input {
   padding: 55px 112px;
   color: #000;
   margin-left: auto;
-}
-
-.form__title {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 35px;
-  text-align: center;
-  margin-bottom: 55px;
 }
 
 .form__item {
@@ -189,7 +185,7 @@ input:-webkit-autofill:active  {
 
 .map {
 	position: absolute;
-	top: 65px;
+	top: 70px;
 	bottom: 0;
 	left: 0;
 	right: 0;
