--- a/src/pages/map/Map.module.css
+++ b/src/pages/map/Map.module.css
@@ -1,5 +1,10 @@
 .section {
-	position: relative;
+    position: relative;
+}
+
+.container {
+	padding: 24px;
+    position: absolute;
 }
 
 .box {
@@ -7,6 +12,10 @@
 	width: 486px;
 	left: 24px;
 	top: 24px;
+}
+
+.paper {
+	padding: 32px 46px;
 }
 
 .selectPaper {
