--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,15 +1,19 @@
 .form {
-	padding: 48px 102px 48px 98px;
+	padding: 62px 16px 113px;
     width: 100vw;
+	height: 100vh;
 	background-color: #fff;
 	color: #000;
+	
 }
 
 @media screen and (min-width: 900px) {
 	.form {
 		width: 520px;
+		height: auto;
 		box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
 		border-radius: 20px;
+		padding: 48px 102px 48px 98px;
 	}
 }
 
@@ -26,6 +30,7 @@
 	font-size: 36px;
 	line-height: 42px;
 	margin: 0;
+	text-align: center;
 }
 
 .messageBlockDescription {
@@ -33,6 +38,7 @@
 	font-size: 18px;
 	line-height: 21px;
 	color: #7B7B7B;
+	text-align: center;
 }
 
 .item {
