--- a/src/pages/map/Map.module.css
+++ b/src/pages/map/Map.module.css
@@ -8,19 +8,31 @@
     position: absolute;
 }
 
+.routeForm {
+	width: 100%;
+	max-width: 486px;
+}
+
 .box {
 	position: relative;
-	width: 486px;
-	left: 24px;
-	top: 24px;
-	pointer-events: all;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	max-width: 486px;
+	padding: 10px;
+	margin: 0 auto;
+	pointer-events: none;
+	min-height: calc(100vh - 120px);
 }
 
 .paper {
-	padding: 32px 46px;
+	padding: 32px 10px;
+	pointer-events: all;
 }
 
 .selectPaper {
+	width: 100%;
+	max-width: 486px;
     padding: 16px 0;
     border-radius: 10px;
     padding-bottom: 34px;
@@ -28,12 +40,15 @@
 }
 
 .radioPaper {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%, -10px);
 	width: 100%;
-    padding: 32px 46px;
+    padding: 10px;
     box-sizing: border-box;
     border-radius: 10px;
     pointer-events: all;
-	transform: translateY(-10px);
 }
 
 .paperContainer {
@@ -41,7 +56,8 @@
 }
 
 .radioItem {
-	width: 118px;
+	max-width: 118px;
+	height: 100%;
     cursor: pointer;
     opacity: 0.6;
     padding: 12px;
@@ -52,9 +68,10 @@
 }
 
 .media {
-	width: 95px;
-    height: 72px;
+	max-width: 95px;
+    max-height: 72px;
     margin-top: 12px;
+	object-fit: contain;
 }
 
 .radioPaper label {
@@ -73,6 +90,28 @@ input[type="radio"] {
 input[type="radio"]:checked + label .radioItem {
 	opacity: 1;
 	box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%), 0px 5px 8px 0px rgb(0 0 0 / 14%), 0px 1px 14px 0px rgb(0 0 0 / 12%);
+}
+
+
+
+@media screen and (min-width: 900px ) {
+
+	.box {
+		min-height: unset;
+		padding: 24px;
+		margin: 0;
+	}
+
+	.paper {
+		padding: 32px 46px;
+	}
+
+	.radioPaper {
+		position: static;
+		padding: 32px 46px;
+		transform: translate(0, 10px);
+	}
+
 }
 
 
